<resources>
    <string name="app_name">LCKV Appjudanten</string>
    <string name="header_text">LCKV</string>

    <string name="people_view_button">Deelnemers</string>
    <string name="store_view_button">Kantine</string>
    <string name="product_view_button">Producten</string>

    <string name="tent1_button">Tent 1</string>
    <string name="tent2_button">Tent 2</string>
    <string name="tent3_button">Tent 3</string>
    <string name="tent4_button">Tent 4</string>
    <string name="tent5_button">Tent 5</string>
    <string name="tent6_button">Tent 6</string>

    <string name="add_camper_txt">Voeg een deelnemer toe</string>
    <string name="add_product_txt">Voeg een product toe</string>
    <string name="balancelabel">Start bedrag</string>
    <string name="namelabel">Deelnemer naam</string>

    <string name="add">Toevoegen</string>
    <string name="done">Klaar</string>
    <string name="cancel">Annuleren</string>
    <string name="add_header">Deelnemer toevoegen</string>
    <string name="title">LCKV App</string>
    <string name="login">Inloggen</string>
    <string name="register">Registreer</string>
    <string name="upload">Upload</string>
    <string name="download">Download</string>



</resources>